# claude-tools

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  bd_dep_output.txt  flow.json  pyproject.toml  release-please-config.json  test-flow-start.md
.beads/: .gitignore  daemon-error  issues.jsonl
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: flow-bug.yml  flow-feature.yml  statuskit-bug.yml  statuskit-feature.yml
.github/actions/telegram-notify/: action.yml
.github/scripts/: commits.py  detect_changes.py  packages.py  projects.py  publish_badges.py  publish_summary.py  resolve_publish.py  ty_to_rdjsonl.py  validate.py  validate_plugin.py
.github/scripts/tests/: conftest.py  test_commits.py  test_detect_changes.py  test_packages.py  test_projects.py  test_publish_badges.py  test_resolve_publish.py  test_validate.py  test_validate_plugin.py
.github/workflows/: _reusable-claude-code-plugin-ci.yml  _reusable-detect.yml  _reusable-plugin-ci.yml  _reusable-publish-pypi.yml  _reusable-python-ci.yml  ci.yml  coderabbit-notify.yml  create-pr.yml  plugins-ci.yml  pr.yml  publish.yml  push.yml
docs/: PYTHON_STYLE.md
docs/notes/: 2026-01-21-precommit-issues.md
docs/plans/: 2026-01-14-statusline-rewrite.md  2026-01-15-statuskit-design.md  2026-01-15-statuskit-mvp-design.md  2026-01-15-statuskit-mvp-impl.md  2026-01-15-statusline-architecture.md  2026-01-16-flow-plugin-design.md  2026-01-18-flow-start-task-display-design.md  2026-01-19-statuskit-distribution-design.md  2026-01-19-statuskit-distribution-plan.md  2026-01-20-cicd-pipeline-design.md  2026-01-21-validation-scripts-design.md  2026-01-21-validation-scripts-implementation.md  2026-01-22-worktree-integration-design.md  2026-01-23-plugins-ci-design.md  2026-01-23-plugins-ci-implementation.md  2026-01-23-python-ci-workflows-design.md  2026-01-23-python-ci-workflows-impl.md  2026-01-23-sonarcloud-integration-design.md  2026-01-24-ci-orchestrator-design.md  2026-01-26-publish-workflow-design.md  2026-01-26-release-please-design.md  2026-01-27-compact-age-format-design.md  2026-01-27-compact-age-format-plan.md  2026-01-27-git-module-design.md  2026-01-27-github-issue-templates-design.md  2026-01-27-github-issue-templates.md  2026-01-27-statuskit-readme-design.md  2026-01-27-text-coloring-fix-design.md  2026-01-27-text-coloring-fix.md  2026-01-27-update-default-config-design.md  2026-01-27-usage-cache-design.md  2026-01-27-usage-limits-design.md  2026-01-28-telegram-notifications-design.md  2026-01-28-telegram-notifications-impl.md  2026-01-29-branch-worktree-cleanup-design.md  2026-01-29-subtask-selection-design.md  2026-01-30-flow-continue-design.md  2026-01-30-worktree-init-design.md  2026-02-06-review-comments-design.md  2026-02-06-sonar-sync-design.md  (+5 more)
docs/superpowers/plans/: 2026-05-13-bd-tree-root-separator.md
docs/superpowers/specs/: 2026-05-12-project-ci-badges-design.md  2026-05-12-publish-ci-badges-design.md  2026-05-13-bd-tree-root-separator-design.md
plugins/flow/: CHANGELOG.md  README.md  plugin.json
plugins/flow/.claude-plugin/: plugin.json
plugins/flow/commands/: after-design.md  after-plan.md  continue.md  decompose.md  done.md  review-comments.md  sonar-sync.md  start.md
plugins/flow/skills/: start.md
plugins/flow/skills/after-design/: SKILL.md
plugins/flow/skills/after-plan/: SKILL.md
plugins/flow/skills/completing-task/: SKILL.md
plugins/flow/skills/continue-issue/: SKILL.md
plugins/flow/skills/decomposing-task/: SKILL.md
plugins/flow/skills/done/: SKILL.md
plugins/flow/skills/init-worktree/: SKILL.md
plugins/flow/skills/linking-design/: SKILL.md
plugins/flow/skills/linking-plan/: SKILL.md
plugins/flow/skills/reviewing-comments/: SKILL.md
plugins/flow/skills/start/: SKILL.md
plugins/flow/skills/starting-task/: SKILL.md
plugins/flow/skills/starting-task/scripts/: bd-card.py  bd-continue.py  bd-tree.py  test_bd_card.py  test_bd_continue.py  test_bd_tree.py
plugins/flow/skills/syncing-sonarcloud/: SKILL.md
plugins/flow/tests/: after-design-baseline-results.md  after-design-green-results.md  after-design-rationalization-patterns.md  after-design-refactor-results.md  after-design-scenarios.md  after-plan-baseline-results.md  after-plan-green-results.md  after-plan-rationalization-patterns.md  after-plan-refactor-results.md  after-plan-scenarios.md  baseline-results.md  done-baseline-results.md  done-green-refactor-results.md  done-rationalization-patterns.md  done-scenarios.md  green-results.md  rationalization-patterns.md  refactor-results.md  start-scenarios.md
statusline/: install.sh
