[project]
name = "claude-tools"
version = "0.1.0"
description = "Custom tools for Claude Code"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
claude-statuskit = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "ty",
    "claude-statuskit",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "S",      # bandit (security)
    "A",      # flake8-builtins
    "ARG",    # flake8-unused-arguments
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "INP",    # flake8-no-pep420
    "N",      # pep8-naming
    "PERF",   # perflint
    "PIE",    # flake8-pie
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "RUF",    # ruff-specific
    "SLF",    # flake8-self
    "TC",     # flake8-type-checking
]
# FURB removed: overlaps with UP/PERF, too aggressive
# Q removed: conflicts with ruff-format
# SIM removed: duplicates PL rules

ignore = [
    "PLR0913",  # too-many-arguments - often 5 is not enough for complex functions
    # Formatter handles these (ruff format makes them redundant):
    "E1",       # indentation - formatter controls
    "E2",       # whitespace - formatter controls
    "E3",       # blank lines - formatter controls
    "E401",     # multiple-imports-on-one-line - formatter splits
    "E502",     # redundant-backslash - formatter removes
    "E701",     # multiple-statements-on-one-line - formatter splits
    "W191",     # tab-indentation - formatter uses spaces
    "W291",     # trailing-whitespace - formatter removes
    "W292",     # missing-newline-at-end-of-file - formatter adds
    "W293",     # blank-line-with-whitespace - formatter removes
    "W391",     # too-many-newlines-at-end-of-file - formatter fixes
    # Duplicates within enabled rule sets:
    "B015",     # useless-comparison - duplicate of PLR0124
    "RET501",   # unnecessary-return-none - duplicate of PLR1711
    # Conflicts with formatter:
    "ISC001",   # single-line-implicit-string-concatenation - conflicts with ruff format
]

unfixable = [
    "TC",      # type-checking imports - can break runtime
    "RET503",  # implicit-return - can break generators
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",     # assert statements
    "S603",     # subprocess without shell
    "S607",     # partial executable path
    "PLR2004",  # magic numbers
    "ARG",      # unused arguments (fixtures)
    "SLF001",   # private member access
    "PLC0415",  # late imports - common test isolation pattern
]
"plugins/**/scripts/*.py" = ["S603", "S607"]  # CLI scripts calling git/bd
".github/scripts/*.py" = ["PLC0415", "S603"]  # Late imports and subprocess security warnings
"packages/statuskit/src/statuskit/__init__.py" = ["PLC0415"]  # Lazy imports for faster CLI startup

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ty.src]
# Only type-check Python packages
include = ["packages"]

[tool.repo]
tooling_files = [
    "pyproject.toml",
    "uv.lock",
    "sonar-project.properties",
]

[tool.repo.project-types.python]
paths = ["packages"]
publish = ["pypi"]

[tool.repo.project-types.claude_code_plugin]
paths = ["plugins"]
publish = []
